force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/agf__ADM_Release_Event_Template__c.object-meta.xml
<CustomObject>
    <description>Release Event Templates represent events such as deployments which take place as part of a Release.</description>
    <label>Release Event Template</label>
    <nameField>
        <displayFormat>RET-{000000}</displayFormat>
        <label>Release Event Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Event Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>