force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Application__c.field-meta.xml
<CustomField>
    <fullName>agf__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Application to which this Release Event Item applies</inlineHelpText>
    <label>Application</label>
    <referenceTo>agf__ADM_Application__c</referenceTo>
    <relationshipLabel>Release Event Templates</relationshipLabel>
    <relationshipName>Release_Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>