force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Base_Event__c.field-meta.xml
<CustomField>
    <fullName>agf__Base_Event__c</fullName>
    <description>This field indicates whether the Release Event is a &quot;Base&quot; event, that is, the event happens at the time indicated by the Release record&apos;s Scheduled Release Date.</description>
    <formula>IF(agf__Day_Offset__c = 0 &amp;&amp;  agf__Event_Duration__c = 0 &amp;&amp; ISBLANK(agf__Start_Time__c) &amp;&amp; 
agf__Minute_Offset__c =0 &amp;&amp;  agf__Hour_Offset__c = 0, &quot;BASE EVENT&quot;, &quot;&quot;)</formula>
    <label>Base Event</label>
    <type>Text</type>
</CustomField>