force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>agf__Day_of_Week__c</fullName>
    <inlineHelpText>Enter the day of the week that the Release Event would occur</inlineHelpText>
    <label>Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>