force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Day_Offset__c.field-meta.xml
<CustomField>
    <fullName>agf__Day_Offset__c</fullName>
    <inlineHelpText>Number of days from the Scheduled Release Date that the Release Event is to occur.</inlineHelpText>
    <label>Day Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>