force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Event_Duration__c</fullName>
    <inlineHelpText>Enter the duration in minutes of this Release Event. Setting this value to zero when Day Offset, Hour Offset and Minute Offset are all zero creates Release Events with a Duration equal to the Release&apos;s Planned Duration.</inlineHelpText>
    <label>Event Duration</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>