force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Instance_Key__c.field-meta.xml
<CustomField>
    <fullName>agf__Instance_Key__c</fullName>
    <inlineHelpText>Instance Key is a Regular Expression (REGEX) that distinguishes which instances participate in this Release Event. See the Custom Link below for details on Regular Expressions.</inlineHelpText>
    <label>Instance Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>