force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Minute_Offset__c.field-meta.xml
<CustomField>
    <fullName>agf__Minute_Offset__c</fullName>
    <inlineHelpText>Number of minutes that this event item is offset from the Scheduled Release Date. Note: Either Start Time or Hour and Minute Offset can be used.</inlineHelpText>
    <label>Minute Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>