force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Notify_Customers__c.field-meta.xml
<CustomField>
    <fullName>agf__Notify_Customers__c</fullName>
    <inlineHelpText>Release Events that are customer facing may be communicated to customers through the Trust site or other means</inlineHelpText>
    <label>Customer facing?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>