force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Release_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Type__c</fullName>
    <inlineHelpText>Select the types of Release which employ this Release Event Item</inlineHelpText>
    <label>Release Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eRelease</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>