force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/fields/agf__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>agf__Start_Time__c</fullName>
    <inlineHelpText>Enter the time of day when the Release Event would occur. Format is HH:MM AM/PM (12 hour). Note: Either Start Time or Hour and Minute Offset can be used.</inlineHelpText>
    <label>Start Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>