force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__Application_required.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Application_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(agf__Application__c)</errorConditionFormula>
    <errorDisplayField>agf__Application__c</errorDisplayField>
    <errorMessage>Application must be specified.</errorMessage>
</ValidationRule>