force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__Day_Offset_required_with_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Day_Offset_required_with_Start_Time</fullName>
    <active>true</active>
    <description>Day Offset must be specified when Start Time is set.</description>
    <errorConditionFormula>ISBLANK(agf__Day_Offset__c) &amp;&amp; NOT(ISBLANK(agf__Start_Time__c))</errorConditionFormula>
    <errorDisplayField>agf__Day_Offset__c</errorDisplayField>
    <errorMessage>Day Offset cannot be blank when Start Time is set. Either set Day Offset to zero (if event is for the same day) or another value.</errorMessage>
</ValidationRule>