force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__Event_Duration_must_be_nonnegative.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Event_Duration_must_be_nonnegative</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Event_Duration__c &lt; 0</errorConditionFormula>
    <errorDisplayField>agf__Event_Duration__c</errorDisplayField>
    <errorMessage>Event Duration cannot be less than zero.</errorMessage>
</ValidationRule>