force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__No_Hour_Offset_when_using_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__No_Hour_Offset_when_using_Start_Time</fullName>
    <active>true</active>
    <description>When Start Time is being used, Hour Offset cannot be specified.</description>
    <errorConditionFormula>NOT(ISBLANK(agf__Hour_Offset__c)) &amp;&amp; NOT(ISBLANK(agf__Start_Time__c))</errorConditionFormula>
    <errorDisplayField>agf__Hour_Offset__c</errorDisplayField>
    <errorMessage>When Start Time is being used, Hour Offset cannot be specified. Either clear Start Time or set  Hours Offset  to blank.</errorMessage>
</ValidationRule>