force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__No_Minute_Offset_when_using_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__No_Minute_Offset_when_using_Start_Time</fullName>
    <active>true</active>
    <description>When Start Time is being used, Minute Offset cannot be specified.</description>
    <errorConditionFormula>NOT(ISBLANK(agf__Minute_Offset__c)) &amp;&amp; NOT(ISBLANK(agf__Start_Time__c))</errorConditionFormula>
    <errorDisplayField>agf__Minute_Offset__c</errorDisplayField>
    <errorMessage>When Start Time is being used, Minute Offset cannot be specified. Either clear Start Time and set Day of Week to blank or set  Minute Offset  to blank.</errorMessage>
</ValidationRule>