force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__No_Start_Time_when_using_offset.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__No_Start_Time_when_using_offset</fullName>
    <active>true</active>
    <description>When an offset is set for either hours or minutes, Start Time cannot be specified.</description>
    <errorConditionFormula>NOT(ISBLANK(agf__Start_Time__c)) &amp;&amp;  
(NOT(ISBLANK(agf__Hour_Offset__c)) ||  NOT(ISBLANK(agf__Minute_Offset__c)))</errorConditionFormula>
    <errorDisplayField>agf__Start_Time__c</errorDisplayField>
    <errorMessage>When an offset is set for either hours or minutes, Start Time cannot be specified. Either clear both Hours Offset and Minutes Offset or set Start Time to blank.</errorMessage>
</ValidationRule>