force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__Offset_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Offset_must_be_specified</fullName>
    <active>true</active>
    <description>Either Hours/Minutes Offset must be specified or Start Time must be specified.</description>
    <errorConditionFormula>ISBLANK(agf__Hour_Offset__c) &amp;&amp; ISBLANK(agf__Minute_Offset__c) &amp;&amp; ISBLANK(agf__Day_Offset__c)</errorConditionFormula>
    <errorDisplayField>agf__Day_Offset__c</errorDisplayField>
    <errorMessage>An Offset must be specified. If the Release Event is to occur at the Release&apos;s Schedule Release Date, set the Day Offset field to 0 (zero).</errorMessage>
</ValidationRule>