force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__Offset_or_StartTime_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Offset_or_StartTime_must_be_specified</fullName>
    <active>true</active>
    <description>Either Hours/Minutes Offset must be specified or Start Time must be specified.</description>
    <errorConditionFormula>ISBLANK(agf__Hour_Offset__c) &amp;&amp; ISBLANK(agf__Minute_Offset__c) &amp;&amp; ISBLANK(agf__Start_Time__c)</errorConditionFormula>
    <errorMessage>Either Hours/Minutes Offset must be specified or Start Time must be specified.</errorMessage>
</ValidationRule>