force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Event_Template__c/validationRules/agf__Start_Time_must_be_in_time_format.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Start_Time_must_be_in_time_format</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(REGEX(agf__Start_Time__c,&quot;^([0-9]|0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;),REGEX(agf__Start_Time__c, &quot;^(([0][0-9]|[1][0-2])|[0-9]):([0-5][0-9])( *)((AM|PM)|(A|P))$&quot;)))</errorConditionFormula>
    <errorDisplayField>agf__Start_Time__c</errorDisplayField>
    <errorMessage>Time value must be formatted HH:MM (based on a 24 hour clock), or HH:MM AM or HH:MM PM (based on as 12 hour clock).</errorMessage>
</ValidationRule>